fixing post links alignement on single blog page

--- a/style.css
+++ b/style.css
@@ -1015,7 +1015,7 @@ body.page .main-navigation {
 @media only screen and (min-width: 1168px) {
   .post-navigation .nav-links {
     flex-direction: row;
-    margin: 0 calc(1 * (100vw / 12));
+    margin: 0 calc(2 * (100vw / 12));
     max-width: calc(8 * (100vw / 12));
   }
 }
